fix: z-index issue for legacy star appearing over md-tab

--- a/style.css
+++ b/style.css
@@ -390,7 +390,7 @@ label {
         width: 100%;
         inset-block-end: 0;
         inset-inline-start: 0;
-        z-index: 2;
+        z-index: 3;
         display: flex;
         flex-direction: column;
         overflow-x: auto;
